[gd_scene load_steps=3 format=3 uid="uid://w6hth87nydv1"]

[ext_resource type="Script" path="res://DialogueSystem/UI/DialogueUI.gd" id="1_rne02"]
[ext_resource type="PackedScene" uid="uid://udb584jlfob3" path="res://DialogueSystem/UI/DialogueChoice.tscn" id="2_ic118"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rne02")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="MainBox" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainBox"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="VBoxContainer/MainBox/VBoxContainer"]
layout_mode = 2
text = "<name go here hehe>"

[node name="TextArea" type="Label" parent="VBoxContainer/MainBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "hello there"

[node name="Options" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="DialogueChoice" parent="VBoxContainer/Options" instance=ExtResource("2_ic118")]
layout_mode = 2

[node name="DialogueChoice2" parent="VBoxContainer/Options" instance=ExtResource("2_ic118")]
layout_mode = 2
